--- a/Assignment 1/assgn1.html
+++ b/Assignment 1/assgn1.html
@@ -2,7 +2,7 @@
 <head>
 <title>Home shopping</title>
 </head>
-
+<h1>MANASI</h1><h2>DESHMUKH</h2>
 <frameset rows="15%,*">
 <frame src=assign1_1.html></frame>
 <frameset cols="35%,*">
